test/parallel/forall/task-private-vars/const-errors.good
const-errors.chpl:3: error: cannot assign to const variable
const-errors.chpl:4: error: cannot assign to const variable
